--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     background-color: transparent;
     border: 1px solid rgb(255, 255, 255);
     border-radius: 20px;
-    color: azure;
+    color: rgb(11, 243, 243);
     padding: 30px 40px;
     box-shadow: rgb(253, 253, 253) 0px 1px 1px, rgb(252, 251, 251) 0px 0px 0px 1px; ;
     
